2005-11-27  Alex Roitman  <shura@gramps-project.org>
	* src/po/template.po: Update.

2005-11-26  Don Allingham  <don@gramps-project.org>
	* src/EditPerson.py: properly handled added name types for the
	preferred name

2005-11-25  Wayne Bergeron  <wb@vallnet.com>
	* src/GenericFilter.py
	(IsLessThanNthGenerationAncestorOfDefaultPerson): Add new filter rule.

2005-11-25  Don Allingham  <don@gramps-project.org>
	* src/gramps.glade: enable word wrap on publication information
	on the source display

2005-11-25  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/GenericFilter.py (HasCommonAncestorWith): Catch no longer
	existing person; (IsSpouseOfFilterMatch) Call prepare for recursive
	filter

2005-11-24  Don Allingham  <don@gramps-project.org>
	* src/po/template.po: updated translation file

2005-11-24  Alex Roitman  <shura@gramps-project.org>
	* NEWS: Update.
	* src/docgen/HtmlDoc.py (build_style_declaration): Use top- and
	bottom- margins for paragraph styles.

2005-11-23  Don Allingham  <don@gramps-project.org>
	* src/docgen/KwordDoc.py: fix margins and fonts.

2005-11-23  Wayne Bergeron  <wb@vallnet.com>
	* src/GenericFilter.py (IsLessThanNthGenerationAncestorOfBookmarked):
	Add new filter rule.

2005-11-23  Alex Roitman  <shura@gramps-project.org>
	* src/ArgHandler.py (cl_export): Add grdb export from the CLI.
	* src/plugins/Check.py (check_parent_relationships): Step through
	the progress bar.
	* test/runtest.sh: Add txt format and family_group report.
	* test/impex.sh: Add import/export test set.
	* example/gramps/example.gramps: Correct errors.
	* src/BaseDoc.py (SheetParser.startElement): Tolerate missing
	tmargin and bmargin (when reading older style files).
	* src/docgen/PSDrawDoc.py (encode): Add tolerant encoder;
	(patch_text): Remove unused method.
	* src/docgen/AsciiDoc.py (reformat_para): Add optional argument
	for the first line indent; (start_paragraph): remove leader
	handling; (end_paragraph): Handle all formatting, including leader